--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -89,7 +89,7 @@
     </head>
 
     <body>
-        <h1>set up todo app ci/cd using jenkins</h1>
+        <h1>set up todo app CI/CD using jenkins</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
